--- a/templates/plato_editar.html
+++ b/templates/plato_editar.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+    <!--  ******************** ENCABEZADO Y BARRA DE NAVEGACION ********************  -->
   <header class="header">
       <div class="container">
           <!-- ******Inicio BURGER MENU****** -->
@@ -37,16 +38,16 @@
           <nav class="header__nav">
               <ul id="header__list">
                   <li class="header__item">
-                      <a class="header__link js-scroll" href="index.html">Inicio</a>
+                      <a class="header__link js-scroll" href="../index.html">Inicio</a>
                   </li>
                   <li class="header__item">
-                      <a class="header__link js-scroll" href="quienes.html">Quienes Somos</a>
+                      <a class="header__link js-scroll" href="../quienes.html">Quienes Somos</a>
                   </li>
                   <li class="header__item">
                       <a class="header__link js-scroll" href="carta.html">Carta</a>
                   </li>
                   <li class="header__item">
-                      <a class="header__link js-scroll" href="contacto.html">Contacto</a>
+                      <a class="header__link js-scroll" href="../contacto.html">Contacto</a>
                   </li>
                   <li class="header__item">
                       <!-- Falta agregar HTML o link para pedidos -->
@@ -68,16 +69,16 @@
               <nav class="header_nav">
                   <ul class="header_list">
                       <li class="header_item">
-                          <a class="header_link js-scroll" href="index.html">Inicio</a>
+                          <a class="header_link js-scroll" href="../index.html">Inicio</a>
                       </li>
                       <li class="header_item">
-                          <a class="header_link js-scroll" href="quienes.html">Quienes Somos</a>
+                          <a class="header_link js-scroll" href="../quienes.html">Quienes Somos</a>
                       </li>
                       <li class="header_item">
                           <a class="header_link js-scroll" href="carta.html">Carta</a>
                       </li>
                       <li class="header_item">
-                          <a class="header_link js-scroll" href="contacto.html">Contacto</a>
+                          <a class="header_link js-scroll" href="../contacto.html">Contacto</a>
                       </li>
                       <li class="header_item">
                           <a class="header_link js-scroll"
@@ -107,7 +108,8 @@
   <main class="menu">
     <div class="container" id="app">
       <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
-        <h1>Alta de Producto</h1>
+        <h2>Modificacion de datos</h2>
+        <br></br>
         <div class="mb-3">
           <label for="nombre">Nombre: </label>
           <input type="text" name="nombre" id="nombre" v-model="nombre">
