--- a/templates/carta.html
+++ b/templates/carta.html
@@ -167,7 +167,7 @@
         </div>
     </footer>
     <!-- ******************** FIN FOOTER ******************** -->
-    <script src="JS/app.js"></script>
+    <script src="../JS/app.js"></script>
     <script>
         <!--Link de Bootstrap-->
         src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -176,9 +176,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+    <script src="../JS/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script><!--Link de VUE-->
-    <script src="../js/platos.js"></script>
+    <script src="../JS/platos.js"></script>
 </body>
 
 
