--- a/templates/plato_editar.html
+++ b/templates/plato_editar.html
@@ -147,7 +147,7 @@
     </div>
 </footer>
 <!-- ******************** FIN FOOTER ******************** -->
-<script src="JS/app.js"></script>
+<script src="../JS/app.js"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
@@ -155,9 +155,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
-  <script src="../js/main.js"></script>
+  <script src="../JS/main.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="../js/platos_editar.js"></script>
+  <script src="../JS/platos_editar.js"></script>
 </body>
 
 </html>
