--- a/templates/producto_nuevo.html
+++ b/templates/producto_nuevo.html
@@ -98,20 +98,20 @@
       <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
         <h1>Alta de Producto</h1>
         <div class="mb-3">
-          <label for="nombre">Nombre</label>
+          <label for="nombre">Nombre:</label>
           <input type="text" name="nombre" id="nombre" v-model="nombre">
         </div>
         <div class="mb-3">
-          <label for="precio">Precio</label>
+          <label for="precio">Precio: $ </label>
           <input type="number" name="precio" id="precio" v-model="precio">
         </div>
         <div class="mb-3">
-          <label for="stock">Descripcion</label>
-          <input type="number" name="stock" id="stock" v-model="stock">
+          <label for="stock">Descripcion:</label>
+          <input type="text" name="describ" id="describ" v-model="describ">
         </div>
         <div class="mb-3">
-          <label for="imagen">Imagen</label>
-          <input type="text" name="imagen" id="imagen" v-model="imagen">
+          <label for="imagen">Imagen:</label>
+          <input type="url" name="imagen" id="imagen" v-model="imagen">
           <img width="100" :src="imagen" alt="">
          
         </div>
@@ -124,17 +124,29 @@
 
 
   </main>
-  <footer>
-    <!-- place footer here -->
+    <!-- ******************** FOOTER ******************** -->
+    <footer>
+      <div class="footer">
+          <div class="footer__container">
+              <div class="footer__author">
+                  <p> &copy; Com. 23026 - Equipo Nro. 1 </p>
+              </div>
+              <div class="footer__alero">
+                  <img src="../img/F_alero_1.jpg" alt="">
+              </div>
+          </div>
+      </div>
   </footer>
+  <!-- ******************** FIN FOOTER ******************** -->
+  <script src="../JS/app.js"></script>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
-  <script src="../js/main.js"></script>
+  <script src="../JS/main.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="../js/productos.js"></script>
+  <script src="../JS/productos.js"></script>
 </body>
 </html>
