--- a/templates/producto_update.html
+++ b/templates/producto_update.html
@@ -45,9 +45,21 @@
             </form>
         </div>
     </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+   <!-- ******************** FOOTER ******************** -->
+   <footer>
+    <div class="footer">
+        <div class="footer__container">
+            <div class="footer__author">
+                <p> &copy; Com. 23026 - Equipo Nro. 1 </p>
+            </div>
+            <div class="footer__alero">
+                <img src="../img/F_alero_1.jpg" alt="">
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- ******************** FIN FOOTER ******************** -->
+<script src="../JS/app.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -55,9 +67,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"> </script>
-    <script src="../js/main.js"></script>
+    <script src="../JS/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../js/producto_editar.js"></script>
+    <script src="../JS/producto_editar.js"></script>
 </body>
 
 </html>
