Links archivos js

--- a/templates/producto_nuevo.html
+++ b/templates/producto_nuevo.html
@@ -147,6 +147,6 @@
     </script>
   <script src="../JS/main.js"></script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-  <script src="../JS/productos.js"></script>
+  <script src="../JS/platos.js"></script>
 </body>
 </html>
