--- a/templates/producto_update.html
+++ b/templates/producto_update.html
@@ -69,7 +69,7 @@
         crossorigin="anonymous"> </script>
     <script src="../JS/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../JS/producto_editar.js"></script>
+    <script src="../JS/platos_editar.js"></script>
 </body>
 
 </html>
