--- a/templates/producto_update.html
+++ b/templates/producto_update.html
@@ -12,9 +12,11 @@
 
 <body>
 
-    <header id="header">
-        <!-- place navbar here -->
-    </header>
+    <!--  ******************** ENCABEZADO Y BARRA DE NAVEGACION ********************  -->
+  <header id="header">
+    <!-- Header agregado por JS -->
+</header>
+  <!-- ******************** FIN ENCABEZADO Y BARRA DE NAVEGACION ******************** -->
     <main>
         <div class="container" id="app">
             <form style="background-color: aliceblue;margin:10px auto ; width: 400px; padding: 20px;">
@@ -59,7 +61,6 @@
     </div>
 </footer>
 <!-- ******************** FIN FOOTER ******************** -->
-<script src="../JS/app.js"></script>
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -70,6 +71,7 @@
     <script src="../JS/main.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="../JS/platos_editar.js"></script>
+    <script src="../JS/app.js"></script>
 </body>
 
 </html>
