se modifico el id descrip

--- a/templates/producto_nuevo.html
+++ b/templates/producto_nuevo.html
@@ -47,7 +47,7 @@
         </div>
         <div class="mb-3">
           <label for="stock">Descripcion:</label>
-          <input type="text" name="describ" id="describ" v-model="describ">
+          <input type="text" name="descrip" id="descrip" v-model="descrip">
         </div>
         <div class="mb-3">
           <label for="imagen">Imagen:</label>
