se cambio la acción a modificar

--- a/templates/plato_editar.html
+++ b/templates/plato_editar.html
@@ -51,7 +51,7 @@
                     <input type="url" name="imagen" id="imagen" v-model="imagen">
                     <img width="100" :src="imagen" alt="">
                 </div>
-                <button type="button" class="btn btn-success" v-on:click="grabar()">modificar</button>
+                <button type="button" class="btn btn-success" v-on:click="modificar()">modificar</button>
             </form>
         </div>
 
